Update profile pic src

--- a/authors.html
+++ b/authors.html
@@ -13,8 +13,8 @@
 
     <link href="/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Thorin Tabor RSS">
 
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -31,14 +31,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <meta name="author" content="Thorin Tabor" />
-    <meta name="description" content="xxx" />
+    <meta name="description" content="" />
 <meta property="og:site_name" content="Thorin Tabor"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="Thorin Tabor"/>
-<meta property="og:description" content="xxx"/>
+<meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="."/>
-<meta property="og:image" content="../images/profile.jpg">
+<meta property="og:image" content="images/profile.jpg">
 
   <title>Thorin Tabor &ndash; Authors</title>
 </head>
@@ -46,7 +46,7 @@
   <aside>
     <div>
       <a href=".">
-        <img src="../images/profile.jpg" alt="Thorin Tabor" title="Thorin Tabor">
+        <img src="images/profile.jpg" alt="Thorin Tabor" title="Thorin Tabor">
       </a>
       <h1><a href=".">Thorin Tabor</a></h1>
 
@@ -108,8 +108,8 @@
   "@type" : "Blog",
   "name": " Thorin Tabor ",
   "url" : ".",
-  "image": "../images/profile.jpg",
-  "description": "xxx"
+  "image": "images/profile.jpg",
+  "description": ""
 }
 </script>
 </body>
