--- a/cv.html
+++ b/cv.html
@@ -257,7 +257,7 @@ supplements for <em>Shadows Over Sol</em>, <em>Against the Dark Yogi</em> and ot
 <li>A science fiction horror roleplaying game set in our own solar system, some 200 
 years in the future. Humanity has spread throughout the inner planets and is making 
 headway into the outer solar system, but humankind has brought its own dark workings 
-with it into space.</li>
+into space.</li>
 </ul>
 </li>
 <li>
@@ -276,7 +276,7 @@ working to make the game harder for the remaining players.</li>
 <ul>
 <li>A tabletop roleplaying game set in a fantasy world based on mythological India. It's 
 a game of high action and cosmically-chosen heroes with fantastic abilities, working 
-to thwart the coming of the final age of the world.</li>
+to thwart the coming of the final age.</li>
 </ul>
 </li>
 <li>
@@ -284,7 +284,7 @@ to thwart the coming of the final age of the world.</li>
 <em>Crowdfunding and Team Coordination, May 2013</em></p>
 <ul>
 <li>Crowdfunded the first general printing of Ganjifa cards in the United States since 
-the 1950s. Ganjifa cards are tradition round playing cards from India and Persia.</li>
+the 1950s. Ganjifa cards are traditional round playing cards from India and Persia.</li>
 </ul>
 </li>
 <li>
@@ -293,16 +293,16 @@ the 1950s. Ganjifa cards are tradition round playing cards from India and Persia
 <ul>
 <li>A tabletop roleplaying game designed to run any number of genres or settings. It is 
 meant to be quick and easy, while supporting a variety of styles of play. This system 
-was later revised, improved and use in both <em>Against the Dark Yogi</em> and <em>Shadows Over Sol</em>.</li>
+was later revised, improved and used in both <em>Against the Dark Yogi</em> and <em>Shadows Over Sol</em>.</li>
 </ul>
 </li>
 <li>
 <p><strong>Dark Ages: Trystell</strong><br/>
 <em>Writing, Design and System Administration, July 2002</em></p>
 <ul>
-<li>A browser-based strategy game, where players take on the role of empires in a 
+<li>A browser-based strategy game, where players would take on the role of empires in a 
 fantasy world. The game was competitive and would pit players against each other for 
-domination over the continent. At its height it has over 1000 active players.</li>
+domination over the continent. At its height it had over 1000 active players.</li>
 </ul>
 </li>
 </ul>
