--- a/games.html
+++ b/games.html
@@ -94,25 +94,25 @@ crowdfunding and subsequent publication. This is scheduled for January 2017.</p>
 <p><strong>Shadows Over Sol</strong> is a science fiction horror roleplaying game set in our own solar 
 system, some 200 years in the future. Humanity has spread throughout the inner planets and 
 is making headway into the outer solar system, but humankind has brought its own dark 
-workings with it into space.</p>
+workings into space.</p>
 <p><strong>We're All Going to Die Here</strong> is a tongue-in-cheek card game based on the tropes of the 
 horror genre. In it a group of teenagers explore a haunted mansion, only to be picked off 
 one by one in overly cliche ways. Those players whose characters are eliminated then "join 
 the haunt," working to make the game harder for the remaining players.</p>
 <p><strong>Against the Dark Yogi</strong> is a tabletop roleplaying game set in a fantasy world based on 
 mythological India. It's a game of high action and cosmically-chosen heroes with fantastic 
-abilities, working to thwart the coming of the final age of the world.</p>
+abilities, working to thwart the coming of the final age.</p>
 <p><strong>The Difficult Life of the Costumed Henchman</strong> is a theater-style live action roleplaying 
 game, designed to run in roughly four hours. In it a group of costumed henchmen working 
 for the city's supervillains meet to discuss the possibility of forming a union. 
 Unexpected events and hijinks ensue.</p>
 <p><strong>Saga Machine</strong> is a tabletop roleplaying game designed to run any number of genres or 
 settings. It is meant to be quick and easy, while supporting a variety of styles of play. 
-This system was later revised, improved and use in both <em>Against the Dark Yogi</em> and 
+This system was later revised, improved and used in both <em>Against the Dark Yogi</em> and 
 <em>Shadows Over Sol</em>.</p>
-<p><strong>Dark Ages: Trystell</strong> was a browser-based strategy game, where players take on the role 
-of empires in a fantasy world. The game was competitive and would pit players against each 
-other for domination over the continent. At its height it has over 1000 active players.</p>
+<p><strong>Dark Ages: Trystell</strong> was a browser-based strategy game where players would take on the 
+role of empires in a fantasy world. The game was competitive and would pit players against 
+each other for domination over the continent. At its height it had over 1000 active players.</p>
   </div>
 </article>
 
