--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ and also write code for the <a href="http://genepattern.org">GenePattern</a> ser
 have worked on <a href="http://genomespace.org">GenomeSpace</a> and the <a href="http://jupyter.org">Jupyter</a> 
 integration of <a href="http://igv.org">Integrative Genomics Viewer (IGV)</a>. I primarily program in 
 Python, JavaScript and Java, but have experience with a variety of other languages as well.</p>
-<p>In my spare time I write and design tabletop games, mostly of the roleplaying variety. These are published by 
+<p>In my spare time, I write and design tabletop games, mostly of the roleplaying variety. These are published by 
 <a href="http://www.tabcreations.com">Tab Creations LLC</a>, of which I am part-owner. Games I have written, crowdfunded and 
 published include <a href="http://www.tabcreations.com/site/Shadows_Over_Sol">Shadows Over Sol</a>, 
 <a href="http://www.tabcreations.com/site/Against_the_Dark_Yogi">Against the Dark Yogi</a> and the upcoming 
