--- a/software.html
+++ b/software.html
@@ -93,7 +93,7 @@ of additional projects for which I have contributed, please see my
 <a href="https://github.com/tmtabor">GitHub profile</a>.</p>
 <p><strong><a href="http://genepattern-notebook.org">GenePattern Notebook</a></strong> is an extension for Jupyter 
 Notebook which bridges the functionality of Jupyter and GenePattern. It provides access 
-to hundreds of bioinformatic tools within Jupyter Notebook, all within a friendly user 
+to hundreds of bioinformatic tools in Jupyter Notebook, all with a friendly user 
 interface.</p>
 <p><strong><a href="https://github.com/genepattern/notebook-repository">Notebook Repository</a></strong> is a 
 web service intended to run alongside a JupyterHub instance. It integrates with the
@@ -105,7 +105,7 @@ microarray), sequence variation and copy number, proteomic, flow cytometry and n
 analysis. It also provides a REST API and queueing system integrations.</p>
 <p><strong><a href="https://github.com/genepattern/genepattern-python">GenePattern Python Library</a></strong> is a 
 Python wrapper for the GenePattern API. It provides programmatic access for searching and 
-selecting analysess, uploading files, submitting jobs, retrieving the analysis results and 
+selecting analyses, uploading files, submitting jobs, retrieving the analysis results and 
 sending those results to a downstream step in an analysis pipeline.</p>
 <p><strong><a href="https://github.com/genepattern/jupyter-wysiwyg">Jupyter WYSIWYG Editor</a></strong> is an 
 extension for Jupyter Notebook that adds WYSIWYG editing functionality to markdown/HTML 
