--- a/dnd/pages/cebu.html
+++ b/dnd/pages/cebu.html
@@ -16,8 +16,6 @@
         <ul>
             <li class="home"><a href="../index.html">Horizons</a></li>
             <li  class="active"><a href="../pages/cebu.html">Cebu</a></li>
-            <li ><a href="../pages/grichom.html">Grichom</a></li>
-            <li ><a href="../pages/lalog.html">Lalog</a></li>
             <li ><a href="../pages/money.html">Money</a></li>
             <li ><a href="../pages/trystell.html">Trystell</a></li>
         </ul>
@@ -38,7 +36,83 @@
     <section class="article">
     
 
-    <p>This is a placeholder. Information on this page will be written and posted in the coming weeks.</p>
+    <p><img src="/theme/img/cebu.jpg" style="display: block; width: 100%; margin-left: auto; margin-right: auto; max-width: 500px; border: solid 3px black;" /></p>
+<p>Cebu has been described as the land that time forgot. It is one of the last refuges of the 
+ogres. It is a primal land, filled with mega-fauna and hunter-gatherers.</p>
+<h2>History</h2>
+<p>Cebu has long been isolated from mainland Trystell, both
+culturally and geographically. Because of this distance it is
+something of a throwback—a land that time forgot. Not only is
+it the last refuge of the ogres, but it is also home to an
+impressive array of mega-fauna.</p>
+<p>Sometime in the centuries after the War of the Shattering the
+ancestors of the island's ogres established
+their tribal culture. Here they found the island uninhabited, and
+started to rebuild their culture as they saw fit. They fashioned a
+culture centered around the tribe, where magic was taboo and
+where status came with hunting the great game of the island.
+In later times the island would be subject to several gnomish
+migrations and a later crusade by Grichom to drive heretics from,
+the region. These latter invaders built on the island a colony with
+a working port. This one city on the island, however, has long
+since fallen under the shadow of the surrounding gnomish tribes.</p>
+<h2>Culture</h2>
+<p>Most of Cebu still retains a hunter-gatherer culture, barely in the
+bronze age. Tribal loyalties on the island run strong, and the
+native ogres, gnomes and humans/dragonborn tend to stick with
+their own.</p>
+<p>Magic has a particularly strong taboo among the tribes on the island, and
+among some tribes “witches” are killed upon discovery, their
+heads left on pikes as a warning to others.
+Cebu is also one of the few regions on Trystell where the
+Common language hasn't penetrated far from Lalog colony.</p>
+<h2>Major Region Features</h2>
+<ul>
+<li><strong>Gimbi Forest:</strong> Gimbi Forest is made up mostly of an
+extremely large species of elm trees that only grow on Cebu
+Island. This species of trees is known for its high-quality, waterresistant
+wood and is often sought in ship construction by those
+who have large sums of money.
+The locals make sure not to cut
+down too many trees. If they did, it
+would not only destroy the trees,
+but it would drive down prices.</li>
+<li><strong>Gimloo:</strong>
+Gimloo is a tribal camp whose
+economy is centered around
+extraction of natural resources.
+Logging goes on in the south,
+mining in the west. These resources
+are then typically shipped
+downriver to Lalog where they
+make their way by port to the far
+corners of Trystell.</li>
+<li><strong>Lagden Mountains:</strong> The Lagden Mountains are a small
+mountain chain on Cebu. This chain is rich in a variety of
+different ores and home to many different dangerous, but
+valuable, species whose hides fetch a sizable price elsewhere.
+The peaks are capped in glaciers.</li>
+<li><strong>Lagden River:</strong> The Lagden River is a surprisingly sizable
+river, despite being on an island. It is fed by the glaciers that sit
+high in the Lagden Mountains and is it is said that its water
+possesses restorative properties.</li>
+<li><strong>Lalog:</strong> The lone settled colony on Cebu, Lalog was
+founded during a Grichom-funded crusade to the island
+a generation ago. Today, however, the city is under the rule of the
+much-feared gnomish Wrathwrench clan. They demand tribute from the city
+and take a cut of all goods being shipped through the port..</li>
+<li><strong>Nirifte:</strong> This large encampment exists
+mostly as a trading grounds for hunters and trappers, although it
+seasonally becomes the nexus and meeting point for the various
+tribes found across western Cebu. It also serves as the largest
+fishing encampment on the island, and during the appropriate
+season boats will regularly travel between here and Lalog.</li>
+<li><strong>Ruby Mountain:</strong> Ruby Mountain is one of the fabled gem
+mountains. It is a sacred place to the followers of Zuraic and guarded 
+by a strange lizard creature. However,
+there have been strange rumors of this mountain slowly
+crumbling; something not occurring on the other gem mountains.</li>
+</ul>
     </section>
             </div>
             <div class="large-2 aside column">
@@ -51,8 +125,6 @@
                 <h3>Campaign</h3>
                 <ul>
                     <li><a href="../pages/cebu.html">Cebu</a></li>
-                    <li><a href="../pages/grichom.html">Grichom</a></li>
-                    <li><a href="../pages/lalog.html">Lalog</a></li>
                     <li><a href="../pages/money.html">Money</a></li>
                     <li><a href="../pages/trystell.html">Trystell</a></li>
                 </ul>
@@ -82,8 +154,8 @@
                 <h3>Tags</h3>
                 <ul>
                     <li><a href="../tag/leveling.html">Leveling</a>(1)</li>
-                    <li><a href="../tag/planning.html">Planning</a>(4)</li>
                     <li><a href="../tag/loot.html">Loot</a>(1)</li>
+                    <li><a href="../tag/planning.html">Planning</a>(4)</li>
                 </ul>
             </div>
             <div class="large-3 category-column column">
