--- a/dnd/pages/trystell.html
+++ b/dnd/pages/trystell.html
@@ -16,8 +16,6 @@
         <ul>
             <li class="home"><a href="../index.html">Horizons</a></li>
             <li ><a href="../pages/cebu.html">Cebu</a></li>
-            <li ><a href="../pages/grichom.html">Grichom</a></li>
-            <li ><a href="../pages/lalog.html">Lalog</a></li>
             <li ><a href="../pages/money.html">Money</a></li>
             <li  class="active"><a href="../pages/trystell.html">Trystell</a></li>
         </ul>
@@ -38,7 +36,20 @@
     <section class="article">
     
 
-    <p>This is a placeholder. Information on this page will be written and posted in the coming weeks.</p>
+    <p><img src="/theme/img/trystell.jpg" style="display: block; width: 100%; margin-left: auto; margin-right: auto; max-width: 500px; border: solid 3px black;" /></p>
+<p>Trystell is a fantasy world, which is just emerging from its version of the medieval era.
+This campaign focuses on the island of Cebu and the surrounding regions. Cebu is located 
+in the Rasonic Ocean, in the northern hemisphere of the world. The island is huge, 
+somewhere between the size of Madagascar and Australia. At the northern points, it touches 
+the Circle of Na, Trystell's equivalent to the Arctic Circle. At its lower points it's 
+solidly temperate.</p>
+<p>To the southwest, across the ocean, is the empire of Grichom, a thriving country of humans 
+with a dragonborn minority. This country founded Lalog colony on Cebu as part of a crusade, 
+almost a generation ago.</p>
+<p>To the southwest, along the coast, are a scattering of elven city-states, remnants of empires 
+that collapsed a century ago or more. These city-states are mercantile forces in their own 
+right, but their control doesn't extend far from the city walls. Further inland there is a 
+land of petty warlords and turmoil.</p>
     </section>
             </div>
             <div class="large-2 aside column">
@@ -51,8 +62,6 @@
                 <h3>Campaign</h3>
                 <ul>
                     <li><a href="../pages/cebu.html">Cebu</a></li>
-                    <li><a href="../pages/grichom.html">Grichom</a></li>
-                    <li><a href="../pages/lalog.html">Lalog</a></li>
                     <li><a href="../pages/money.html">Money</a></li>
                     <li><a href="../pages/trystell.html">Trystell</a></li>
                 </ul>
@@ -82,8 +91,8 @@
                 <h3>Tags</h3>
                 <ul>
                     <li><a href="../tag/leveling.html">Leveling</a>(1)</li>
-                    <li><a href="../tag/planning.html">Planning</a>(4)</li>
                     <li><a href="../tag/loot.html">Loot</a>(1)</li>
+                    <li><a href="../tag/planning.html">Planning</a>(4)</li>
                 </ul>
             </div>
             <div class="large-3 category-column column">
