--- a/dnd/pages/cebu.html
+++ b/dnd/pages/cebu.html
@@ -36,7 +36,7 @@
     <section class="article">
     
 
-    <p><img src="/theme/img/cebu.jpg" style="display: block; width: 100%; margin-left: auto; margin-right: auto; max-width: 500px; border: solid 3px black;" /></p>
+    <p><img src="/dnd/theme/img/cebu.jpg" style="display: block; width: 100%; margin-left: auto; margin-right: auto; max-width: 500px; border: solid 3px black;" /></p>
 <p>Cebu has been described as the land that time forgot. It is one of the last refuges of the 
 ogres. It is a primal land, filled with mega-fauna and hunter-gatherers.</p>
 <h2>History</h2>
