--- a/dnd/pages/trystell.html
+++ b/dnd/pages/trystell.html
@@ -36,7 +36,7 @@
     <section class="article">
     
 
-    <p><img src="/theme/img/trystell.jpg" style="display: block; width: 100%; margin-left: auto; margin-right: auto; max-width: 500px; border: solid 3px black;" /></p>
+    <p><img src="/dnd/theme/img/trystell.jpg" style="display: block; width: 100%; margin-left: auto; margin-right: auto; max-width: 500px; border: solid 3px black;" /></p>
 <p>Trystell is a fantasy world, which is just emerging from its version of the medieval era.
 This campaign focuses on the island of Cebu and the surrounding regions. Cebu is located 
 in the Rasonic Ocean, in the northern hemisphere of the world. The island is huge, 
